--- a/I3wm/config
+++ b/I3wm/config
@@ -225,4 +225,4 @@ exec --no-startup-id nitrogen --restore
 exec --no-startup-id picom 
 exec_always --no-startup-id autotiling
 exec --no-startup-id polybar
-exec --no-startup-id plank 
+exec --no-startup-id setxkbmap no,de 
